update format